# algorithms

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  main.cpp
algorithms/: complete_sub_tree.cpp  mergesort.cpp
include/: algorithms.h  complete_sub_tree.h  mergesort.h
